# NewProjetcAI

./: .env  .env.prod  .env.stage  .gitattributes  .gitignore  .npmrc  .prettierrc.json  AGENTS.md  Gemfile  README.md  SMART_ASSISTANT_AUDIO.md  app.json  azure-build.yml  azure-deploy.yml  azure-pipelines.yml  declarations.d.ts  directory-tree.md  fastlane-android-key.json  icons.json  index.js  jsconfig.json  metro.config.js  package.json  react-native.config.js  rn-cli.config.js  stuck-at-splashscreen.md  tsconfig.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: subagent-backend-architect.md  subagent-crashlytics-documenter.md  subagent-crashlytics-investigator.md  subagent-docs-analyst.md  subagent-frontend-architect.md  subagent-mobile-architect.md  subagent-qa-backend.md  subagent-qa-frontend.md  subagent-qa-mobile.md  subagent-security-analyst.md
.claude/commands/: create-subagent.md  setup-project.md
agents/: documentation-specialist.md  task-rules.md  ui-developer.md
android/: .project  build.gradle  gradle.properties  settings.gradle
android/app/: .project  _BUCK  build.gradle  google-services.json  kyte-key.keystore  proguard-rules.pro
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/codegen/react-native-clarity/jni/: CMakeLists.txt  Clarity.cpp  Clarity.h
android/codegen/react-native-config/jni/: CMakeLists.txt  RNCConfigSpec.cpp  RNCConfigSpec.h
android/codegen/react-native-iap/jni/: CMakeLists.txt  RNIap.cpp  RNIap.h
android/codegen/react-native-nitro-modules/jni/: CMakeLists.txt  NitroModulesSpec.cpp  NitroModulesSpec.h
assets/animations/: lottie-variants-creation.json
assets/images/: account-confirmation.js  account-pay-modal.js  account-pay-transactions.js  admin.js  ai-description-tip-en.js  ai-description-tip-es.js  ai-description-tip-pt.js  alert.js  amway.js  background-circle-bottom-negative.js  billing-annually.js  billing-callback-fail.js  billing-callback-success.js  billing-monthly.js  blockManagePlanImg.js  cancel-transaction.js  catalog-mobile-desktop.js  cloud-offline.js  data-export-csv.js  delete-user.js  delete.js  dotted-arrow-down.js  empty-cart.js  flavors.js  google-pay.js  inativate-user.js  index.js  kyte-pos-into-kyte-control.js  modal-offline.js  no-result.js  order-globe.js  payment-machine-mercadopago-ok.js  payment-machine-mercadopago.js  payment-machine.js  personal-access.js  pin-product-tip.js  printer-error.js  printer-found.js  pro-rocket-without-clouds.js  product-tax-tip.js  (+10 more)
docs/: architecture.md  crashlytics-v3.0.0-fix-plan.md  crashlytics-workflow-guide.md  developer-guide.md  ios-dependency-audit.md  quick-start.md  react-native-android-upgrade-notes.md  react-navigation-7-migration-issues.md  rn-update-test-id.md  troubleshooting.md
docs/_@examples/: KyteFeatureModel.md
docs/api/: README.md  services.md
docs/common/: CenterContent.md  FilterLabel.md  KyteText.md  ScreenStructure.md
docs/plans/: type-safe-i18n-plan.md
docs/prompts/: investigate-and-document-crashlytics-crash.md
docs/services/: KyteServices.md
docs/subscription/: by-pass.md
ios/: GoogleService-Info.plist  KyteCatalog-Info.plist  Podfile  kyte-Bridging-Header.h  kyte-swift-bridge.swift  sentry.properties  tmp.xcconfig
ios/Bolts.framework/: Info.plist
ios/FBSDKCoreKit.framework/: Info.plist
ios/FBSDKLoginKit.framework/: Info.plist
ios/FBSDKPlacesKit.framework/: Info.plist
ios/FBSDKShareKit.framework/: Info.plist
ios/KyteCatalog/: GoogleService-Info.plist  LaunchScreen.xib
ios/OneSignalNotificationServiceExtension/: Info.plist  NotificationService.swift  OneSignalNotificationServiceExtension.entitlements
ios/ar.lproj/: InfoPlist.strings
ios/assets/: icons.json
ios/en.lproj/: InfoPlist.strings  Localizable.strings
ios/es.lproj/: InfoPlist.strings  Localizable.strings
ios/hi-IN.lproj/: InfoPlist.strings
ios/id.lproj/: InfoPlist.strings
ios/ko.lproj/: InfoPlist.strings
ios/kyte/: AppCenter-Config.plist  AppDelegate.h  AppDelegate.mm  Info.plist  kyte.entitlements
ios/kyte.xcodeproj/: project.pbxproj
ios/kyte.xcworkspace/: contents.xcworkspacedata
ios/patches/: gRPC-C++.patch  gRPC-Core.patch
ios/pt-BR.lproj/: InfoPlist.strings  Localizable.strings
patches/: @react-native+gradle-plugin+0.82.0.patch  @react-native-community+masked-view+0.1.11.patch  @react-native-firebase+analytics+23.4.1.patch  @react-native-firebase+app+23.4.1.patch  @react-native-firebase+auth+23.4.1.patch  @react-native-firebase+crashlytics+23.4.1.patch  @react-native-firebase+firestore+23.4.1.patch  @react-native-firebase+perf+23.4.1.patch  @react-native-firebase+remote-config+23.4.1.patch  @react-native-firebase+storage+23.4.1.patch  @react-native-google-signin+google-signin+9.0.2.patch  react-native+0.81.5.patch  react-native-appsflyer+6.17.1.patch  react-native-circular-progress+1.3.3.patch  react-native-iap+13.0.4.patch  react-native-image-crop-picker+0.42.0.patch  react-native-image-gallery+2.1.5.patch  react-native-progress-circle+2.1.0.patch  react-native-snap-carousel+3.9.1.patch
scripts/: fix-reactcodegen-props.rb
src/: App.js  ReactotronConfig.js  Router.js  configureStore.js  globals.d.ts  kyte-constants.js
src/components/: AppContainer.js  AuthContainer.js
src/constants/: common.js
src/enums/: AuthTokenScope.js  BillingErrors.js  Breakpoints.js  CardServiceConfigError.js  Catalog.js  CurrentSaleDiscountType.js  CustomerAccountMovementReason.js  CustomerAccountMovementType.js  CustomerOrigin.js  DetailOrigin.js  ErrorTypes.js  Features.js  FirebaseAnalytics.js  Flavors.js  HelperSteps.js  HelperStepsStates.js  InstallmentType.js  LinkingMap.js  MercadoPagoPaymentType.js  NotificationsSnapshot.js  OnboardingCarousel.js  OrderStatus.js  PROFeatures.js  PaymentDetailType.js  PaymentGatewayServiceType.js  PaymentGatewayType.js  PaymentType.js  Period.js  Permission.js  Plans.js  ProductTabKeys.js  RemoteConfigDefaults.js  SaleOrigin.js  SaleSort.js  Sample.js  Screens.js  StockHistoryType.js  Subscription.ts  SyncStatus.js  TaxType.js  (+2 more)
(+940 files in other folders)
